--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <meta http-equiv="X-UA-COmpatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title><%= title %></title>
     <meta name="description" content="" />
