Wrap yield in #site_main div

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
         <h1>Ruby4Kids</h1>
       </header>
 
-      <%= yield %>
+      <div id="site_main" role="main">
+        <%= yield %>
+      </div>
 
       <footer>
       </footer>
