More basic styling

--- a/app/stylesheets/_application.scss
+++ b/app/stylesheets/_application.scss
@@ -2,4 +2,14 @@
 APPLICATION STYLES
 ==============================================================================*/
 
+/*--------------------------------------------------------------------
+Main Layout
+--------------------------------------------------------------------*/
 
+#site {
+  @include grid_container;
+}
+
+#site_main {
+  @include grid_column(12, true);
+}
