--- a/app/stylesheets/_ui.scss
+++ b/app/stylesheets/_ui.scss
@@ -8,6 +8,10 @@ TODO:
     global look and feel.
 *********************************************************************/
 
+/*--------------------------------------------------------------------
+jQuery UI Theme
+--------------------------------------------------------------------*/
+
 /*
  * jQuery UI CSS Framework 1.8.7
  *
