--- a/app/views/users/_auth_links.html.erb
+++ b/app/views/users/_auth_links.html.erb
@@ -4,5 +4,8 @@
     <%- if controller_name != 'passwords' %><li><%= link_to "Forgot your password?", new_user_password_path %></li><% end -%>
     <%- if controller_name != 'confirmations' %><li><%= link_to "Didn't receive confirmation instructions?", new_user_confirmation_path %></li><% end -%>
     <%- if controller_name != 'unlocks' %><li><%= link_to "Didn't receive unlock instructions?", new_user_unlock_path %></li><% end -%>
+    <%- User.omniauth_providers.each do |provider| %>
+      <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+    <% end -%>
   </ul>
 </nav>
